--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>SudokUber!</title>
-  <link href="../styles/main.css" rel="stylesheet" type="text/css">
+  <link href="./build/styles/main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
