add Number selector

--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
     <div id='numSelector'>
       <center>
         <div>
-          <span id="ns1" class='padNumbers' value='1'>1</span>
-          <span id="ns2" class='padNumbers' value='2'>2</span>
-          <span id="ns3" class='padNumbers' value='3'>3</span>
+          <span id="ns1" class='padNumber' value='1'>1</span>
+          <span id="ns2" class='padNumber' value='2'>2</span>
+          <span id="ns3" class='padNumber' value='3'>3</span>
         </div>
         <div>
-          <span id="ns4" class='padNumbers' value='4'>4</span>
-          <span id="ns5" class='padNumbers' value='5'>5</span>
-          <span id="ns6" class='padNumbers' value='6'>6</span>
+          <span id="ns4" class='padNumber' value='4'>4</span>
+          <span id="ns5" class='padNumber' value='5'>5</span>
+          <span id="ns6" class='padNumber' value='6'>6</span>
         </div>
         <div>
-          <span id="ns7" class='padNumbers' value='7'>7</span>
-          <span id="ns8" class='padNumbers' value='8'>8</span>
-          <span id="ns9" class='padNumbers' value='9'>9</span>
+          <span id="ns7" class='padNumber' value='7'>7</span>
+          <span id="ns8" class='padNumber' value='8'>8</span>
+          <span id="ns9" class='padNumber' value='9'>9</span>
         </div>
         <div>
-          <span id="nsx" class='padNumbers' value='x'>x</span>
+          <span id="nsx" class='padCancel' value='x'>x</span>
         </div>
       </center>
     </div>
