tweak number selector layout

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
 	<section id="sudoku-game-container">
     <div id='numSelector'>
       <div>
-        <span id="ns1" class='padNumber' value='1'>1</span>
-        <span id="ns2" class='padNumber' value='2'>2</span>
-        <span id="ns3" class='padNumber' value='3'>3</span>
-      </div>
+        <div id="ns1" class='padNumber' value='1'><div>1</div></div>
+        <div id="ns2" class='padNumber' value='2'><div>2</div></div>
+        <div id="ns3" class='padNumber' value='3'><div>3</div></div>
+     <div> </div></div>
       <div>
-        <span id="ns4" class='padNumber' value='4'>4</span>
-        <span id="ns5" class='padNumber' value='5'>5</span>
-        <span id="ns6" class='padNumber' value='6'>6</span>
-      </div>
+        <div id="ns4" class='padNumber' value='4'><div>4</div></div>
+        <div id="ns5" class='padNumber' value='5'><div>5</div></div>
+        <div id="ns6" class='padNumber' value='6'><div>6</div></div>
+     <div> </div></div>
       <div>
-        <span id="ns7" class='padNumber' value='7'>7</span>
-        <span id="ns8" class='padNumber' value='8'>8</span>
-        <span id="ns9" class='padNumber' value='9'>9</span>
-      </div>
+        <div id="ns7" class='padNumber' value='7'><div>7</div></div>
+        <div id="ns8" class='padNumber' value='8'><div>8</div></div>
+        <div id="ns9" class='padNumber' value='9'><div>9</div></div>
+     <div> </div></div>
       <div>
-        <span id="nsx" class='padCancel' value='x'>x</span>
+        <div id="nsx" class='padCancel' value='x'><div>x</div></div>
       </div>
     </div>
     <table align="center" id="game-table">
