implement difficulty selector

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
   <section id="sudoku-game-container">
     <header>
       <form class="difficulty-select">
-        <label for="difficulty">Sudoku Game</label>
-        <select id="difficulty">
+        <div id="reset-game" class="settings">Reset</div>
+        <select id="difficulty" class="settings">
           <option value="2">Beginner</option>
           <option value="3">Professional</option>
           <option value="4">Superstar</option>
         </select>
       </form>
       <div class="options">
-        <div id="reset-game">Reset</div>
-        <div id="show-solution">Solution</div>
+        <div id="retry-game" class="settings">Retry</div>
+        <div id="show-solution" class="settings">Solution</div>
         <div></div>
       </div>
       <div class="clearfix"></div>
