make difficulty reasonable

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <form class="difficulty-select">
         <div id="reset-game" class="settings">Reset</div>
         <select id="difficulty" class="settings">
-          <option value="4">Beginner</option>
-          <option value="5">Professional</option>
-          <option value="6">Superstar</option>
+          <option value="3">Easy</option>
+          <option value="4" selected>Medium</option>
+          <option value="5">Hard</option>
         </select>
       </form>
       <div class="options">
