add win condition

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <form class="difficulty-select">
         <div id="reset-game" class="settings">Reset</div>
         <select id="difficulty" class="settings">
-          <option value="3">Easy</option>
-          <option value="4" selected>Medium</option>
-          <option value="5">Hard</option>
+          <option value="1">Easy</option>
+          <option value="45" selected>Medium</option>
+          <option value="60">Hard</option>
         </select>
       </form>
       <div class="options">
@@ -30,22 +30,22 @@
     </header>
     <div id='numSelector'>
       <div>
-        <div id="ns1" class='padNumber' value='1'><div>1</div></div>
-        <div id="ns2" class='padNumber' value='2'><div>2</div></div>
-        <div id="ns3" class='padNumber' value='3'><div>3</div></div>
-     <div> </div></div>
+        <div class='padNumber'><div>1</div></div>
+        <div class='padNumber'><div>2</div></div>
+        <div class='padNumber'><div>3</div></div>
+      </div>
       <div>
-        <div id="ns4" class='padNumber' value='4'><div>4</div></div>
-        <div id="ns5" class='padNumber' value='5'><div>5</div></div>
-        <div id="ns6" class='padNumber' value='6'><div>6</div></div>
-     <div> </div></div>
+        <div class='padNumber'><div>4</div></div>
+        <div class='padNumber'><div>5</div></div>
+        <div class='padNumber'><div>6</div></div>
+      </div>
       <div>
-        <div id="ns7" class='padNumber' value='7'><div>7</div></div>
-        <div id="ns8" class='padNumber' value='8'><div>8</div></div>
-        <div id="ns9" class='padNumber' value='9'><div>9</div></div>
-     <div> </div></div>
+        <div class='padNumber'><div>7</div></div>
+        <div class='padNumber'><div>8</div></div>
+        <div class='padNumber'><div>9</div></div>
+      </div>
       <div>
-        <div id="nsx" class='padCancel' value='x'><div>x</div></div>
+        <div class='padCancel'><div>clear</div></div>
       </div>
     </div>
     <table align="center" id="game-table">
