change retry to new game

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <section id="sudoku-game-container">
     <header>
       <form class="difficulty-select">
-        <div id="reset-game" class="settings">Reset</div>
+        <div id="reset-game" class="settings">New Game</div>
         <select id="difficulty" class="settings">
           <option value="30">Easy</option>
           <option value="45" selected>Medium</option>
